--- a/template/main.tex
+++ b/template/main.tex
@@ -4,7 +4,8 @@
 \renewcommand{\baselinestretch}{1.0}
 % Symbols
 \usepackage[T1]{fontenc} % For accidents characters
-\usepackage{amsmath} % For mathematical symbols
+% Mathematics 
+\usepackage{amsmath} 
 % Theorems
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}
