--- a/template/main.tex
+++ b/template/main.tex
@@ -38,6 +38,15 @@ This
     \sum_{i=1}^n \frac{1}{i^2} = \frac{\pi^2}{6}
 \]
 is some out-of-line mathematics.
+This
+\[
+    \begin{pmatrix}
+    1 & 2 \\
+    3 & 4 \\
+    \end{pmatrix}
+\]
+is a matrix. 
+
 
 \begin{theorem}
 This is a theorem.
